third_party/move/move-compiler-v2/tests/warnings-are-errors/unused_assign_to_param.exp
// -- Model dump before bytecode pipeline
module 0x42::test {
    private fun bar(x: u8) {
        if Gt<u8>(x, 3) {
          x: u8 = 42;
          Tuple()
        } else {
          Tuple()
        };
        x: u8 = 42;
        Tuple()
    }
    private fun foo(x: u8) {
        x: u8 = 42;
        Tuple()
    }
} // end 0x42::test


Diagnostics:
warning: Unused assignment to `x`. Consider removing or prefixing with an underscore: `_x`
  ┌─ tests/warnings-are-errors/unused_assign_to_param.move:3:9
  │
3 │         x = 42;
  │         ^^^^^^

warning: Unused assignment to `x`. Consider removing or prefixing with an underscore: `_x`
  ┌─ tests/warnings-are-errors/unused_assign_to_param.move:8:13
  │
8 │             x = 42;
  │             ^^^^^^

warning: Unused assignment to `x`. Consider removing or prefixing with an underscore: `_x`
   ┌─ tests/warnings-are-errors/unused_assign_to_param.move:10:9
   │
10 │         x = 42;
   │         ^^^^^^


============ bytecode verification succeeded ========

Error: Warnings found, and configuration indicates that warnings should be treated as errors
